实现发送验证码到指定的电子邮件功能

--- a/springboot_security01/src/main/resources/application.properties
+++ b/springboot_security01/src/main/resources/application.properties
@@ -13,3 +13,23 @@ spring.main.allow-bean-definition-overriding=true
 
 #session 过期时间，单位：秒
 server.servlet.session.timeout=600
+
+
+#===邮箱配置
+## 邮箱服务器地址
+#QQ smtp.qq.com
+#sina smtp.sina.cn
+#aliyun smtp.aliyun.com
+#163  smtp.163.com
+spring.mail.host=smtp.qq.com
+
+# 邮箱用户名
+spring.mail.username=3108136635@qq.com
+#邮箱密码（注意：QQ邮箱应该使用授权码）
+spring.mail.password=hbbfjedzfpzmddfj
+spring.mail.default-encoding=UTF-8
+
+#发送邮件地址
+mail.fromMail.sender=3108136635@qq.com
+#接收邮件地址
+mail.fromMail.receiver=dbooking123456@foxmail.com
