--- a/springboot_security01/src/main/resources/application.properties
+++ b/springboot_security01/src/main/resources/application.properties
@@ -24,12 +24,12 @@ server.servlet.session.timeout=600
 spring.mail.host=smtp.qq.com
 
 # 邮箱用户名
-spring.mail.username=3108136635@qq.com
+spring.mail.username=**************8
 #邮箱密码（注意：QQ邮箱应该使用授权码）
-spring.mail.password=hbbfjedzfpzmddfj
+spring.mail.password=***********8
 spring.mail.default-encoding=UTF-8
 
 #发送邮件地址
-mail.fromMail.sender=3108136635@qq.com
+mail.fromMail.sender=******************8
 #接收邮件地址
-mail.fromMail.receiver=dbooking123456@foxmail.com
+mail.fromMail.receiver=****************8
